grammars/ocaml/grammar.js
    compilation_unit: $ => seq(
      optional($.shebang),
      optional($._structure),
    ),

    _structure: $ => choice(
      repeat1(';;'),
      seq(
        repeat(';;'),
        choice($._structure_item, $.toplevel_directive, $.expression_item),
        repeat(choice(
          seq(repeat(';;'), choice($._structure_item, $.toplevel_directive)),
          seq(repeat1(';;'), $.expression_item),
        )),
        repeat(';;'),
      ),
    ),

    expression_item: $ => seq(
      $._sequence_expression,
      repeat($.item_attribute),
    ),

    _module_typed: $ => seq(':', field('module_type', $._module_type)),

    _typed: $ => seq(':', field('type', $._type)),

    _parenthesized_abstract_type: $ => parenthesize($._abstract_type),

    _sequence_expression: $ => choice(
      $._expression,
      alias($._sequence_expression_anonymous, $.sequence_expression),
    ),

    _match_cases: $ => prec.right(seq(
      optional('|'),
      sep1('|', $.match_case),
    )),

    match_case: $ => seq(
      field('pattern', $._pattern),
      optional($.guard),
      '->',
      field('body', choice($._sequence_expression, $.refutation_case)),
    ),

    function_expression: $ => seq(
      'function',
      optional($._attribute),
      $._match_cases,
    ),

    _delimited_pattern: $ => choice(
      $._extra_constructor,
      $.record_pattern,
      $.list_pattern,
      $.array_pattern,
      $.iarray_pattern,
      $.parenthesized_pattern,
      alias($._unboxed_tuple_pattern, $.tuple_pattern),
    ),

    _pattern: $ => choice(
      $._effect_pattern,
      $.alias_pattern,
      alias($._or_pattern_anonymous, $.or_pattern),
      alias($._tuple_pattern, $.tuple_pattern),
      $.cons_pattern,
      $.exception_pattern,
      $.effect_pattern,
    ),

    alias_pattern: $ => prec('alias_pattern', seq(
      field('pattern', $._pattern),
      'as',
      field('alias', $._value_pattern),
    )),

    typed_pattern: $ => parenthesize(seq(
      field('pattern', $._pattern),
      $._typed,
    )),

    constructor_pattern: $ => prec('constructor_pattern', seq(
      $._constructor_path,
      optional(alias($._parenthesized_abstract_type, $.abstract_type)),
      field('pattern', $._pattern),
    )),

    tag_pattern: $ => prec('constructor_pattern', seq(
      $.tag,
      field('pattern', $._pattern),
    )),

    polymorphic_variant_pattern: $ => seq(
      '#',
      $.type_constructor_path,
    ),

    record_pattern: $ => seq(
      choice('{', '#{'),
      sep1(';', $.field_pattern),
      optional(seq(';', '_')),
      optional(';'),
      '}',
    ),

    field_pattern: $ => seq(
      $.field_path,
      optional($._typed),
      optional(seq('=', field('pattern', $._pattern))),
    ),

    list_pattern: $ => seq(
      '[',
      $._sequence_pattern_content,
      ']',
    ),

    cons_pattern: $ => prec.right('cons_pattern', seq(
      field('left', $._pattern),
      '::',
      field('right', $._pattern),
    )),

    array_pattern: $ => seq(
      '[|',
      optional($._sequence_pattern_content),
      '|]',
    ),

    _sequence_pattern_content: $ => seq(
      sep1(';', $._pattern),
      optional(';'),
    ),

    range_pattern: $ => prec('range_pattern', seq(
      field('left', $._signed_constant),
      '..',
      field('right', $._signed_constant),
    )),

    lazy_pattern: $ => prec('constructor_pattern', seq(
      'lazy',
      optional($._attribute),
      field('pattern', $._pattern),
    )),

    local_open_pattern: $ => seq(
      $.module_path,
      '.',
      field('pattern', $._delimited_pattern),
    ),

    package_pattern: $ => parenthesize(seq(
      'module',
      optional($._attribute),
      $._module_name,
      optional($._module_typed),
    )),

    parenthesized_pattern: $ => parenthesize($._pattern),

    _attribute: $ => seq('%', $.attribute_id),

    // Constants

    _signed_constant: $ => choice(
      $._constant,
      $.signed_number,
    ),

    number: $ => NUMBER,

    signed_number: $ => seq(/[+-]/, NUMBER),

    character: $ => seq(
      choice('\'', '#\''),
      $.character_content,
      token.immediate('\''),
    ),

    character_content: $ => choice(
      token.immediate(/\r*\n/),
      token.immediate(/[^\\'\r\n]/),
      $._null,
      $.escape_sequence,
    ),

    string: $ => seq('"', optional($.string_content), '"'),

    string_content: $ => repeat1(choice(
      token.immediate(/\s/),
      token.immediate(/\[@/),
      /[^\\"%@]+|%|@/,
      $._null,
      $.escape_sequence,
      alias(/\\u\{[0-9A-Fa-f]+\}/, $.escape_sequence),
      alias(/\\\r*\n[\t ]*/, $.escape_sequence),
      $.conversion_specification,
      $.pretty_printing_indication,
    )),

    quoted_string: $ => seq('{', $._quoted_string, '}'),

    _quoted_string: $ => seq(
      $._left_quoted_string_delimiter,
      optional($.quoted_string_content),
      $._right_quoted_string_delimiter,
    ),

    quoted_string_content: $ => repeat1(choice(
      token.immediate(/\s/),
      token.immediate(/\[@/),
      /[^%@|]+|%|@|\|/,
      $._null,
      $.conversion_specification,
      $.pretty_printing_indication,
    )),

    _value_pattern: $ => choice(
      $._simple_value_pattern,
      $.parenthesized_operator,
    ),

    module_path: $ => path($.module_path, $._simple_module_name),

    field_path: $ => path($.module_path, $._field_name),

    constructor_path: $ => path($.module_path, $._simple_constructor_name),

    _constructor_path: $ => choice(
      $.constructor_path,
      $._extra_constructor,
    ),

    type_constructor_path: $ => path($.extended_module_path, $.type_constructor),

    _field_name: $ => alias($._lowercase_identifier, $.field_name),
    type_constructor: $ => seq(
      $._lowercase_identifier,
      optional(token.immediate('#')),
    ),
    _simple_module_name: $ => alias($._uppercase_identifier, $.module_name),
    _module_name: $ => choice($._simple_module_name, alias('_', $.module_name)),
    _simple_constructor_name: $ => choice(
      alias($._uppercase_identifier, $.constructor_name),
      parenthesize(alias('::', $.constructor_name)),
    ),
    unit: $ => choice(
      seq('(', ')'),
      seq('begin', optional($._attribute), 'end'),
    ),
    boolean: $ => choice('true', 'false'),
    _lowercase_identifier: $ => /(\\#)?[\p{Ll}_][\p{XID_Continue}']*/,
    _uppercase_identifier: $ => /[\p{Lu}][\p{XID_Continue}']*/,

    tag: $ => seq(/`/, choice($._lowercase_identifier, $._uppercase_identifier)),
